--- a/datahub-ui/style/components.css
+++ b/datahub-ui/style/components.css
@@ -1,3 +1,7 @@
+.hidden {
+    visibility: hidden;
+}
+
 .datahub-map {
     width: 100%;
     height: 100%;
@@ -70,6 +74,23 @@
     background-color: silver;
 }
 
-.hidden {
-    visibility: hidden;
+.big .datahub-number {
+    text-align: center;
+}
+
+.datahub-number {
+    width: 100%;
+    font-size: 16px;
+}
+
+.datahub-number .value {
+    font-size: 28px;
+}
+
+.big .datahub-number .value {
+    font-size: 36px;
+}
+
+.small .datahub-number, .small .datahub-number .value  {
+    font-size: 18px;
 }
