alert message, legend as button group, exclusive button group

--- a/datahub-ui/style/dark-theme.css
+++ b/datahub-ui/style/dark-theme.css
@@ -1,7 +1,7 @@
 /*
 very-dark-gray: #182228
 dark-grey: #233541
-dark: #2E3F4B
+grey: #2E3F4B
 light-grey: #5f6773
 very-light-grey: #adb7c5
 orange: #F6A623
@@ -52,4 +52,49 @@ body {
 
 .datahub-number .value {
     color: white;
+}
+
+.datahub-button-group .element {
+    background-color: #5f6773;
+}
+
+.datahub-button-group .element:hover {
+    background-color: #5f6773;
+    color: black;
+    cursor: pointer;
+}
+
+.datahub-button-group .element.active {
+    background-color: #adb7c5;
+    color: black;
+}
+
+.legend .datahub-button-group .element {
+    margin-right: 12px;
+    background-color: transparent;
+    color: #adb7c5;
+}
+
+.legend .datahub-button-group .element:hover {
+    color: #adb7c5;
+}
+
+.legend .datahub-button-group .element.active:hover {
+    color: #5f6773;
+}
+
+.legend .datahub-button-group .element.active {
+    color: #5f6773;
+}
+
+.legend .datahub-button-group .units {
+    font-size: 0.6em;
+}
+
+.legend .datahub-button-group .element.color-1 {
+    border-left: 16px solid #F8E81C;
+}
+
+.legend .datahub-button-group .element.color-2 {
+    border-left: 16px solid #5ECF52;
 }
