--- a/datahub-ui/style/components.css
+++ b/datahub-ui/style/components.css
@@ -19,59 +19,18 @@
     stroke: lime;
 }
 
-.datahub-legend {
-    display: flex;
-    margin-top: 20px;
-}
-
-.datahub-legend .element {
-    display: flex;
-    white-space: nowrap;
-}
-
-.datahub-legend .element div {
-    height: 100%;
-    display: flex;
-}
-
-.datahub-legend .color-band {
-    min-width: 4px;
-    max-width: 4px;
-}
-
-.datahub-legend .label,
-.datahub-legend .unit {
-    padding: 0 4px;
-}
-
-.datahub-legend .color-0 {
-    background-color: red;
-}
-
-.datahub-legend .color-1 {
-    background-color: orange;
-}
-
-.datahub-legend .color-2 {
-    background-color: lime;
-}
-
 .datahub-button-group {
     display: flex;
+}
+
+.vertical .datahub-button-group {
     flex-direction: column;
 }
 
 .datahub-button-group .element {
     align-items: center;
     justify-content: center;
-}
-
-.datahub-button-group .element:hover {
-    background-color: #eee;
-}
-
-.datahub-button-group .element.active {
-    background-color: silver;
+    padding: 4px;
 }
 
 .big .datahub-number {
@@ -136,4 +95,42 @@
     padding-left: 20px; 
     padding-right: 20px; 
     flex: 1;
+}
+
+.datahub-alert-message {
+    display: flex;
+}
+
+.datahub-alert-message .alert-band {
+    max-width: 64px;
+    min-width: 64px;
+    min-height: 1em;
+    background-color: yellow;
+}
+
+.datahub-alert-message .alert-band {
+    max-width: 64px;
+    min-width: 64px;
+    min-height: 1em;
+    background-image: url('https://cdn.jsdelivr.net/open-iconic/1.1.1/svg/warning.svg');
+    background-repeat: no-repeat;
+    background-size: 1em;
+    background-position: center center;
+}
+
+.datahub-alert-message .low {
+    background-color: #5ECF52;
+}
+
+.datahub-alert-message .medium {
+    background-color: #F8E81C;
+
+}
+
+.datahub-alert-message .high {
+    background-color: #FF5A6E;
+}
+
+.datahub-alert-message .alert-message {
+    padding: 20px;
 }
