--- a/datahub-ui/style/components.css
+++ b/datahub-ui/style/components.css
@@ -132,6 +132,10 @@
     padding: 20px;
 }
 
+.datahub-month-calendar.element {
+    padding: 0;
+}
+
 .datahub-month-calendar .date-selector {
     width: 100%;
     flex-wrap: wrap;
@@ -161,17 +165,23 @@
 
 .datahub-dropdown .elements {
     display: none;
+    position: absolute;
 }
 
 .datahub-dropdown .elements.active {
-    display: block;
+    display: initial;
 }
 
 .datahub-dropdown .selected-element {
+    width: 100%;
     padding: 10px 0;
 }
 
 .datahub-dropdown .selected-element:after {
     content: "\25BC";
     float: right;
+}
+
+.datahub-calendar .datahub-button-group {
+    display: block;
 }
