bar chart; basic stacked bar chart; tiny fix to data generator

--- a/datahub-ui/style/dark-theme.css
+++ b/datahub-ui/style/dark-theme.css
@@ -44,6 +44,11 @@ body {
     stroke-dasharray: 5,5;
 }
 
+.datahub-chart .bar {
+    fill: #05BDFF;
+    stroke: white;
+}
+
 .datahub-table {
     color: white;
 }
