each shape type in its own group

--- a/datahub-ui/style/dark-theme.css
+++ b/datahub-ui/style/dark-theme.css
@@ -82,7 +82,7 @@ body {
     opacity: 0.8;
 }
 
-.datahub-chart .future-bar {
+.datahub-chart .estimate-bar {
     fill: #F6A623;
     opacity: 0.8;
 }
