--- a/datahub-ui/style/components.css
+++ b/datahub-ui/style/components.css
@@ -169,6 +169,7 @@
     display: none;
     position: absolute;
     min-width: 200px;
+    z-index: 1000;
 }
 
 .datahub-dropdown .elements.active {
