changing chart api to split init, config and data, for events

--- a/datahub-ui/style/components.css
+++ b/datahub-ui/style/components.css
@@ -19,6 +19,10 @@
     stroke: lime;
 }
 
+.datahub-chart .axis.y .tick line{
+    pointer-events: none;
+}
+
 .datahub-button-group {
     display: flex;
 }
