--- a/datahub-ui/style/dark-theme.css
+++ b/datahub-ui/style/dark-theme.css
@@ -230,16 +230,7 @@ body {
 }
 
 .datahub-table-chart {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
     border: 1px solid #666;
-}
-
-.datahub-table-chart div {
-    display: flex;
-    /*border: 1px solid silver;*/
-    /*margin: -1px;*/
 }
 
 .datahub-table-chart .table-container {
@@ -252,23 +243,8 @@ body {
     border-bottom: 1px solid #adb7c5;
 }
 
-.datahub-table-chart .chart-container{
-    min-width: 350px;
-    flex-direction: column;
-}
-
 .datahub-table-chart .chart-container .content {
     border-bottom: 1px solid #adb7c5;
-}
-
-.datahub-table-chart .chart-container .chart {
-    position: absolute;
-    width: 350px;
-}
-
-.datahub-table-chart .header,
-.datahub-table-chart .content {
-    flex-direction: column;
 }
 
 .datahub-table-chart .header {
@@ -277,23 +253,6 @@ body {
 
 .datahub-table-chart .content .row:nth-child(even) {
     background-color: #2E3F4B;
-}
-
-.datahub-table-chart .rows {
-    flex-direction: column;
-}
-
-.datahub-table-chart .row { 
-    flex-direction: row;
-    width: 100%;
-    height: 48px;
-    margin: 0;
-}
-
-.datahub-table-chart .column {
-    flex: 1;
-    align-items: center;
-    padding: 0 0 0 8px;
 }
 
 .datahub-table-chart svg .value-bar {
@@ -324,6 +283,48 @@ body {
 
 .datahub-table-chart svg .grid {
     stroke: #adb7c5;
+}
+
+.datahub-vertical-chart svg .reference-bars rect {
+    fill: black;
+}
+
+.datahub-vertical-chart svg .reference-bars line {
+    stroke: #F6A623
+}
+
+.datahub-vertical-chart svg .bars {
+    fill: #05BDFF;
+}
+
+.datahub-vertical-chart .number .label {
+    font-size: 16px;
+}
+
+.datahub-vertical-chart .number .value {
+    font-size: 28px;
+    color: white;
+}
+
+.datahub-vertical-chart .number0 .label {
+    color: #5ECF52;
+}
+
+.datahub-vertical-chart .number1 .label {
+    color: #F8E81C;
+}
+
+.datahub-vertical-chart .number2 .label {
+    color: #05BDFF;
+}
+
+.datahub-vertical-chart .axis .vertical {
+    stroke: #5f6773
+}
+
+.datahub-vertical-chart .header {
+    font-size: 21px;
+    color: white;
 }
 
 /* non-component styling */
