--- a/datahub-ui/style/components.css
+++ b/datahub-ui/style/components.css
@@ -238,6 +238,14 @@
     display: block;
 }
 
+.datahub-table-chart .content .multiline {
+    display: flex;
+}
+
+.datahub-table-chart .content .multiline div {
+    padding-right: 0.2em;
+}
+
 .datahub-table-chart {
     display: flex;
     flex-direction: row;
