renderVectorMap; prevent zoom < 1; opacity back to 0.8; 0.7.5

--- a/datahub-ui/style/dark-theme.css
+++ b/datahub-ui/style/dark-theme.css
@@ -18,6 +18,12 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.datahub-map .leaflet-overlay-pane path {
+    stroke: silver;
+    stroke-width: 1;
+    fill: none;
+}
+
 .datahub-chart text,
 .datahub-table-chart text {
     fill: #adb7c5;
