tooltip extend to full height

--- a/datahub-ui/dev/dev-style.css
+++ b/datahub-ui/dev/dev-style.css
@@ -3,6 +3,10 @@
     green: #50935D
 */
 
+.datahub-timeseries-chart svg {
+    display: block;
+}
+
 .datahub-timeseries-chart .tick line,
 .datahub-timeseries-chart .domain {
     stroke: #888;
