integrate timeseries with main package

--- a/datahub-ui/style/components.css
+++ b/datahub-ui/style/components.css
@@ -316,3 +316,7 @@
 .datahub-waterfall-chart .number-container .value {
     display: flex;
 }
+
+.datahub-timeseries-chart svg {
+    display: block;
+}
