timeseries tooltip and valueFormatter; map featureClicked/markerClicked -> featureClick/markerClick; 0.8.12

--- a/datahub-ui/style/dark-theme.css
+++ b/datahub-ui/style/dark-theme.css
@@ -505,6 +505,11 @@ body {
     font-size: 0.6em;
 }
 
+.datahub-timeseries-chart .tooltip-label {
+    fill: #aaa;
+    font-size: 0.6em;
+}
+
 /* non-component styling */
 .section {
     background-color: #233541;
